# doc-translator

./: .gitignore  README_jp.md  pyproject.toml
doc_translator/: __init__.py  translation.py  translator.py
doc_translator/formatter/: __init__.py  docx.py  md.py  odt.py
doc_translator/interface/: __init__.py  format.py  translator.py
doc_translator/translator/: chatgpt.py
examples/translate_docx/: main.py  sample.docx  settings.yaml
examples/translate_md/: main.py  settings.yaml
examples/translate_odt/: main.py  settings.yaml
