[tool.poetry]
name = "doc-translator"
version = "0.1.0"
description = ""
authors = ["masashi <masashi.lateolabrax@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.45.0"
pyyaml = "^6.0.2"
python-docx = "^1.1.2"
odfdo = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
